# C-Assignment

./: C documentation1.odt  Textfile.txt
Task1/: CMakeLists.txt  Task1a.c  Task1b.c  Task1c.c  Task1d.c  Task1e.c
Task2/: CMakeLists.txt  Task2a.c  Task2a2.c  Task2b.c  Task2c.c  functions.h  main.c  menu.c  menu.h
